tdf#112658: fix leak when calling TextEngine::SetAttrib

TextCharAttribList::RemoveAttrib lets a dangling pointer
when release unique_ptr obj maAttribs[n]
So retrieve the pointer into the different layers towards
SentenceEditWindow_Impl::ChangeMarkedWord from SpellDialog.
Then when this method is finished, delete the retrieved pointers

Change-Id: I734909dce86ec28d69c09b2a8c0fc4a6941f422a